# poc-scrapy-market

./: README.md  pyproject.toml
marketCrawler/: scrapy.cfg
marketCrawler/marketCrawler/: items.py  pipelines.py  products-conservas.json  settings.py
marketCrawler/marketCrawler/middlewares/: selenium_middleware.py
marketCrawler/marketCrawler/spiders/: BaseSuperMarket.py  supermami.py
